--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,49 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask với Jinja2</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>VBook</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-<body>
-    <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg">
-        Đăng Ký
-    </button>
+<body class="bg-gray-100">
+
+<!-- Header cố định -->
+{% include 'components/header.html' %}
+
+<!-- Banner -->
+<section class="mx-20 mt-32 h-full relative">
+    <img alt="VBook Banner"
+         class="h-full w-full object-cover"
+         src="https://www.getepic.com/assets/home/home-hero-blue-short/hero-desktop.webp">
+
+    <div class="absolute left-[20%] top-[30%] flex flex-col justify-between gap-4 w-[30%]">
+        <span class="text-white font-bold text-3xl">Chào mừng đến với kho sách VBook</span>
+        <span class="font-semibold text-gray-50">Thỏa mãn đam mê học hỏi và trí tưởng tượng phong phú của bạn</span>
+        <button class="text-white bg-transparent border border-white hover:bg-sky-500 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2"
+                type="button">
+            Khám phá ngay
+        </button>
+    </div>
+</section>
+
+
+<main class="px-20 container mt-10">
+    <div class="flex flex-col items-center justify-between border-t pt-5 border-sky-500">
+        <span class="text-3xl font-bold text-sky-600">Mới Nhất</span>
+        <div class="w-full mt-5">
+            {% with books=books%}
+            {% include 'components/listbook.html' %}
+            {% endwith %}
+        </div>
+    </div>
+
+</main>
+
+<footer class="mt-10">
+    {% include 'components/footer.html' %}
+</footer>
+
 </body>
 </html>
