--- a/vbook-main/templates/favorites.html
+++ b/vbook-main/templates/favorites.html
@@ -50,7 +50,7 @@
                     <div class="book-card bg-white p-6 rounded-xl shadow-md relative">
                         <div class="flex flex-col sm:flex-row items-center gap-6">
                             <!-- Ảnh bìa sách -->
-                            <img src="{{ book.image }}" alt="{{ book.title }}" class="w-32 h-48 object-cover rounded-lg">
+                            <img src="{{ book.cover_image_url or CLOUDINARY_DEFAULT_BOOK_COVER_URL }}" alt="{{ book.title }}" class="w-32 h-48 object-cover rounded-lg" onerror="this.onerror=null; this.src='{{ CLOUDINARY_DEFAULT_BOOK_COVER_URL }}';">
                             <div class="flex-1">
                                 <!-- Tiêu đề và tác giả -->
                                 <h2 class="text-2xl font-semibold text-gray-800 mb-2 truncate">{{ book.title }}</h2>
