--- a/vbook-main/templates/reading.html
+++ b/vbook-main/templates/reading.html
@@ -30,7 +30,7 @@
                 {% for book in books %}
                     <div class="book-card bg-white rounded-xl shadow-lg overflow-hidden">
                         <!-- Ảnh bìa sách -->
-                        <img src="{{ book.image }}" alt="{{ book.title }}" class="w-full h-64 object-cover">
+                        <img src="{{ book.cover_image_url or CLOUDINARY_DEFAULT_BOOK_COVER_URL }}" alt="{{ book.title }}" class="w-full h-64 object-cover" onerror="this.onerror=null; this.src='{{ CLOUDINARY_DEFAULT_BOOK_COVER_URL }}';">
                         <div class="p-6">
                             <!-- Tiêu đề và tác giả -->
                             <h2 class="text-2xl font-semibold text-gray-800 mb-2 truncate">{{ book.title }}</h2>
