--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -50,7 +50,16 @@
                     <div class="book-card bg-white p-6 rounded-xl shadow-md relative">
                         <div class="flex flex-col sm:flex-row items-center gap-6">
                             <!-- Ảnh bìa sách -->
-                            <img src="{{ book.image }}" alt="{{ book.title }}" class="w-32 h-48 object-cover rounded-lg">
+
+        {% if book.cover_path %}
+        <img src="{{ book.cover_path }}"
+             alt="{{ book.title }}"
+             class="w-32 h-48 object-cover rounded-lg">
+        {% else %}
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoaj6IKVpPmobkqsRiNqlcfQ9kepfgkoTSwQ&s"
+             alt="{{ book.title }}"
+             class="w-32 h-48 object-cover rounded-lg">
+        {% endif %}
                             <div class="flex-1">
                                 <!-- Tiêu đề và tác giả -->
                                 <h2 class="text-2xl font-semibold text-gray-800 mb-2 truncate">{{ book.title }}</h2>
