--- a/templates/reading.html
+++ b/templates/reading.html
@@ -30,7 +30,16 @@
                 {% for book in books %}
                     <div class="book-card bg-white rounded-xl shadow-lg overflow-hidden">
                         <!-- Ảnh bìa sách -->
-                        <img src="{{ book.image }}" alt="{{ book.title }}" class="w-full h-64 object-cover">
+        {% if book.cover_path %}
+        <img src="{{ book.cover_path }}"
+             alt="{{ book.title }}"
+             class="w-full h-64 object-cover">
+        {% else %}
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoaj6IKVpPmobkqsRiNqlcfQ9kepfgkoTSwQ&s">
+             alt="{{ book.title }}"
+             class="w-full h-64 object-cover"
+        {% endif %}
+
                         <div class="p-6">
                             <!-- Tiêu đề và tác giả -->
                             <h2 class="text-2xl font-semibold text-gray-800 mb-2 truncate">{{ book.title }}</h2>
